# ros2-picarx

./: .gitignore  ARCHITECTURE_COMPARISON.md  Dockerfile  IMPROVEMENTS.md  PROJECT_OVERVIEW.md  QUICK_RUN.md  QUICK_START.md  README.md  ROOM_SCAN_MISSION.md  ROS2_IMPLEMENTATION_SUMMARY.md  ROS2_MIGRATION_GUIDE.md  SCAN_ROOM.sh  WHICH_VERSION.md  build_package.sh  camera_bridge.sh  camera_control.sh  diagnose_python.sh  export_yolo_package.sh  export_yolo_ros1.sh  export_yolo_standalone.sh  fixed_robot_controller.py  improved_robot_controller.py  install_robot_libraries.sh  room_scan_standalone.py  run_room_scan.sh  run_room_scan_native.sh  run_ros2_room_scan.sh  setup_hardware.sh  setup_hardware_simple.sh  start-ros2-picarx.sh  start_picar_working.sh  test_docker_gpio.sh  test_hardware.sh  test_robot_hardware.py  yolo_detector_standalone.py  yolo_headless_detection.py  yolo_live_detection.py  yolo_realsense_detector.py  yolo_robot_headless.py
scripts/: start_cam_stream.sh  test_camera_opencv.py  test_grayscale.py  test_video10_capture.py
src/my_first_pkg/: CMakeLists.txt  package.xml  setup.py
src/my_first_pkg/config/: person_following_params.yaml  simulation_params.yaml
src/my_first_pkg/launch/: bringup.launch.py  person_following.launch.py  room_scan.launch.py  vision_only.launch.py
src/my_first_pkg/msg/: CameraCommand.msg  RobotCommand.msg  TargetPerson.msg
src/my_first_pkg/my_first_pkg/: autonomous_obstacle_avoidance.py  behavior_controller_node.py  camera_publisher.py  camera_servo_node.py  camera_subscriber.py  drive_node.py  multi_sensor_publisher.py  multi_sensor_subscriber.py  person_tracker_node.py  robot_controller_node.py  room_scanner_node.py  sensor_reader.py  wheel_command_listener.py  wheel_command_listener_test.py  wheel_command_publisher.py  yolo_detector_node.py
yolo_detector_ros1/: CMakeLists.txt  package.xml
yolo_detector_ros1/launch/: yolo_detector.launch
yolo_detector_ros1/msg/: Detection.msg  DetectionArray.msg
yolo_detector_ros1/scripts/: yolo_detector_node.py
